--- a/100daysUI/4/HTML/css/style.css
+++ b/100daysUI/4/HTML/css/style.css
@@ -88,6 +88,7 @@ input, textarea {
   -webkit-justify-content: flex-end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  overflow: hidden;
 }
 
 .card {
